--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+
+body {
+    width: 100%;
+    height: 100vh;
+    padding: 10px;
+}
+ 
+.container-custom {
+    max-width: 400px;
+    margin: 120px auto;
+    overflow: auto;
+    min-height: 300px;
+    border: 1px solid rgb(197, 197, 197);
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.title {
+    text-align: center;
+}
