Get tasks from the database
The service will get the tasks from the mock database and each task will be rendered on init inside task-list's component.

--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,3 +1,4 @@
 <h2 class="title">{{ titleName }}</h2>
 <hr>
 <app-add-form></app-add-form>
+<app-task-item *ngFor="let task of tasks" [taskItem]="task"></app-task-item>
