--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -7,5 +7,9 @@
         <label for="item">Day and time:</label>
         <input type="datetime-local" class="form-control" name="day" placeholder="Due date">
     </div>
+    <div class="form-group">
+        <label for="remind">Remind: </label>
+        <input type="checkbox" name="remind">
+    </div>
     <app-button btnStyle="btn-success" btnText="Add"></app-button>
 </form>
