--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,4 @@
-<div class="row task my-2 py-2">
+<div [ngClass]="{ remind: taskItem.remind }" class="row task my-2 py-2">
     <div class="col task-text">
       {{ taskItem.text }}
       <div class="task-date">
