--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -2,3 +2,4 @@
 <hr>
 <app-add-form></app-add-form>
 <app-task-item *ngFor="let task of tasks" [taskItem]="task"></app-task-item>
+<app-pending-tasks></app-pending-tasks>
