Rename css class

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -5,7 +5,7 @@
         {{ taskItem.day }}
       </div>
     </div>
-    <div class="col-3 btn-position">
+    <div class="col-3 col-position">
         <app-button btnStyle="btn-danger btn-del" btnText="Del"></app-button>
     </div>
 </div>
