Generate a new footer component
Nothing too fancy, just a place to put the source code.

--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -3,3 +3,4 @@
 <app-add-form></app-add-form>
 <app-task-item *ngFor="let task of tasks" [taskItem]="task"></app-task-item>
 <app-pending-tasks></app-pending-tasks>
+<app-footer></app-footer>
