--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
+:root {
+    --task-bg: rgb(226, 226, 226);
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -21,7 +25,7 @@ body {
 }
 
 .task {
-    background-color: rgb(226, 226, 226);
+    background-color: var(--task-bg);
     border-radius: 5px;
 }
 
