--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,15 +1,18 @@
 <form>
-    <div class="form-group">
+    <div class="form-group py-2">
         <label for="item">Task:</label>
         <input type="text" class="form-control" name="text" placeholder="Add an item">
     </div>
-    <div class="form-group">
+    <div class="form-group py-2">
         <label for="item">Day and time:</label>
         <input type="datetime-local" class="form-control" name="day" placeholder="Due date">
     </div>
-    <div class="form-group">
-        <label for="remind">Remind: </label>
-        <input type="checkbox" name="remind">
+    <div class="form-check py-2">
+        <input class="form-check-input" type="checkbox" name="remind">
+        <label class="form-check-label" for="remind">Remind</label>
     </div>
-    <app-button btnStyle="btn-success" btnText="Add"></app-button>
+    <div class="button">
+        <app-button btnStyle="btn-success" btnText="Add"></app-button>
+    </div>
+    <hr>
 </form>
