Make it possible to add itens on db through UI
All methods that define how the task list work will be on task-list.components, so in order for things to be in the right place, the task was validated on add-form.component and emmited to task-list.component, and then added using the service.

--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,6 +1,6 @@
 <h2 class="title">{{ titleName }}</h2>
 <hr>
-<app-add-form></app-add-form>
+<app-add-form (addItemEvent)="onAddTask($event)" ></app-add-form>
 <app-task-item *ngFor="let task of tasks" [taskItem]="task"></app-task-item>
 <app-pending-tasks></app-pending-tasks>
 <app-footer></app-footer>
