--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,14 +1,14 @@
-<form>
+<form (ngSubmit)="onSubmit()">
     <div class="form-group py-2">
         <label for="item">Task:</label>
-        <input type="text" class="form-control" name="text" placeholder="Add an item">
+        <input type="text" class="form-control" name="item" [(ngModel)]="item" placeholder="Add an item">
     </div>
     <div class="form-group py-2">
-        <label for="item">Day and time:</label>
-        <input type="datetime-local" class="form-control" name="day" placeholder="Due date">
+        <label for="day">Day and time:</label>
+        <input type="text" class="form-control" name="day" [(ngModel)]="day" placeholder="Due date">
     </div>
     <div class="form-check py-2">
-        <input class="form-check-input" type="checkbox" name="remind">
+        <input type="checkbox" class="form-check-input" name="remind" [(ngModel)]="remind">
         <label class="form-check-label" for="remind">Remind</label>
     </div>
     <div class="button">
